--- a/app/views/messages/new.html.haml
+++ b/app/views/messages/new.html.haml
@@ -18,7 +18,10 @@
   %hr
   %h2 Hey! How do you know that I'm dead?!
   %p Quiet simple.
-  %p You connect your Facebook account with me (the Death), and I will be monitoring your activity.
+  %p 
+    You 
+    = link_to "connect your Facebook account", "#"
+    with me (the Death), and I will be monitoring your activity.
   %p If you go a month without access to your Facebook account I will send you a message... Scared?
   %p Don't be, it's an email message. Inside this message will be a link saying "I'm alive!". If you click on this I'll consider you alive for a while...
   %p Well... If you take more than a month to click on it I'll consider you're dead, and I'll start to send your messages.
