--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,7 +8,7 @@
     = csrf_meta_tags
   %body
     %section
-      %header Last Words
+      %header Europa
     %section= yield
     %a{:href => "https://github.com/nicolasiensen/last-words"}
       %img{:alt => "Fork me on GitHub", :src => "https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png", :style => "position: absolute; top: 0; right: 0; border: 0;"}
