--- a/app/assets/stylesheets/screen.css.sass
+++ b/app/assets/stylesheets/screen.css.sass
@@ -15,11 +15,29 @@ $orange: #7C4C00
 @import compass/reset
 @import columnal/grid
 
+@mixin button($color)
+  +background-image(linear-gradient(lighten($color, 25%), $color))
+  padding: 1em
+  border: 1px solid $color
+  color: white
+  +box-shadow(lighten($color, 50%) 0 1px 1px inset, black 0 1px 2px)
+  +text-shadow(darken($color, 25%) 0 -1px 1px)
+  margin: 0
+  cursor: pointer
+  text-decoration: none
+  &:active
+    position: relative
+    top: 1px
+    +box-shadow(lighten($color, 50%) 0 1px 1px inset, black 0 0 1px)
+
 h1, h2, p, ul
   margin-bottom: 1em
 
-h1, h2, header
+h1, h2, .logo
   font-family: 'Mystery Quest', cursive
+
+h1, h2
+  color: lighten($blue, 50%)
 
 h1
   font-size: xx-large
@@ -41,24 +59,72 @@ strong
   font-weight: bold
 
 a
-  color: lighten($blue, 50%)
+  color: lighten($orange, 50%)
+
+textarea, input[type="number"]
+  resize: none
+  font-size: medium
+  padding: .25em
+  border: none
+  color: lighten($blue, 25%)
+
+input[type="submit"]
+  +button($pink)
+  font-size: medium
+
+.inline-errors
+  color: red
+
+.field_with_errors
+  display: inline
 
 body
   font-family: Lucida Sans Unicode, Lucida Grande, sans-serif
   font-size: small
-  +grid-container
+  background: darken($blue, 10%)
+  color: white
+  line-height: normal
   section
-    +grid-row
-    header
-      +grid(12)
-      +last
-      font-size: xx-large
-      margin-top: 1em
-      margin-bottom: 1em
-    .welcome
-      +grid(6)
-    form.new_message
-      +grid(6)
-      +last
-      label, input[type="submit"]
-        display: block
+    +grid-container
+    .row
+      +grid-row
+    &.header
+      +background-image(linear-gradient(lighten($blue, 25%), $blue))
+      border-bottom: 1px solid lighten($blue, 25%)
+      margin-bottom: 2em
+      header
+        +grid(12)
+        +last
+        line-height: 3em
+        .logo, .user
+          float: left
+        .logo
+          font-size: x-large
+          padding-right: 1em
+          border-right: 1px $blue solid
+        .user
+          padding-left: 1em
+          border-left: 1px lighten($blue, 25%) solid
+          a
+            color: lighten($blue, 75%)
+    &.content
+      .welcome
+        +grid(6)
+      form.new_message
+        +grid(6)
+        +last
+        input[type="number"], input[type="submit"]
+          margin-top: 1em
+        input[type="submit"]
+          display: block
+        textarea
+          width: 100%
+          +box-sizing(border-box)
+    &.footer
+      footer
+        +grid(12)
+        +last
+        border-top: 1px lighten($blue, 50%) dashed
+        margin-top: 3em
+        margin-bottom: 1em
+        padding-top: 1em
