--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,14 +3,24 @@
   %head
     %title LastWords
     = stylesheet_link_tag    "application", :media => "all"
+    %meta{:name => "viewport", :content => "width=device-width, initial-scale=1.0"}
     %link{:href => 'http://fonts.googleapis.com/css?family=Mystery+Quest', :rel => 'stylesheet', :type => 'text/css'}
     = javascript_include_tag "application"
     = csrf_meta_tags
   %body
+    %section.header
+      .row
+        %header
+          .logo europa
+          .user
+            - if current_mortal
+              = current_mortal.name if current_mortal
+            - else
+              = link_to "Sign in with Facebook", "/auth/facebook"
     %section
-      %header europa
-    %section
-      .alert= alert if alert
-    %section= yield
-    %a{:href => "https://github.com/nicolasiensen/last-words"}
-      %img{:alt => "Fork me on GitHub", :src => "https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png", :style => "position: absolute; top: 0; right: 0; border: 0;"}
+      .row
+        .alert= alert if alert
+    %section.content= yield
+    %section.footer
+      .row
+        %footer= raw "The Death is cool too, and keeps this project on #{link_to "Github", "https://github.com/nicolasiensen/last-words"}."
